--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ header{
     background-color: #333;
     font-size: 13pt;
     font-weight: lighter;
-    text-align: center;
+    text-align: justify;
     padding: 15px;
 }
 
