--- a/style.css
+++ b/style.css
@@ -114,4 +114,6 @@ header{
     background-color: rgb(0, 136, 215);
     margin-top: 10px;
     border-radius: 5px;
+    text-align: center;
+    padding-top: 3px;
 }
