--- a/style.css
+++ b/style.css
@@ -16,12 +16,20 @@ header{
     display: flex;
     width: fit-content;
     padding: 10px;
-    gap: 100px;
+    gap: 60px;
+    margin: 10px auto;
 }
 
 .title{
     color: #eee;
     font-size: 27pt;
+}
+
+.top-btn{
+    background-color: #ccc; 
+    padding: 8px; 
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .game-board{
@@ -45,7 +53,11 @@ header{
 }
 
 .highlight{
-    border: 3px solid #ddd !important;
+    border: 3px solid #ccc !important;
+}
+
+.selected{
+    border-bottom: 8px solid #ccc !important;
 }
 
 .invalid{
@@ -66,13 +78,13 @@ header{
 
 .keyboard{
     margin: 10px auto;
-    width: fit-content;
+    /* width: fit-content; */
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 10px;
 }
 
-[class*="row-"]{
+.keyboard-row{
     display: flex;
     gap: 10px;
     width: fit-content;
